--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Drums-of-Jeopardy_1913
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: MacGrath, Harold
@@ -11,6 +14,8 @@ creator:
 description: "The Drums of Jeopardy is a 1920 American novel by Harold MacGrath. The\
   \ story was serialized by The Saturday Evening Post beginning in January 1920.\n\
   \ From Wikipedia (CC BY-SA)."
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1913#The-Drums-of-Jeopardy
 gutenberg_issued: '1999-10-01'
 gutenberg_type: Text
 identifiers:
